# promtEvolution

./: .dockerignore  .env.example  .gitignore  BRD_Business_Requirements_Document.txt  CHANGELOG.md  Dockerfile  FRD_Functional_Requirements_Document.txt  Prompt_Evolution_CLI_All_Documents.txt  README.md  SRS_Software_Requirements_Specification.txt  docker-compose.yml  pyproject.toml
docs/: advanced_workbench_ru.md  deployment_guide.md  python_config_guide.md  quick_usage_ru.md
examples/: advanced_prompt_project.py  prompt.md  prompt_only_project.py  prompt_project.py  task.md  tests.json
my_prompts/: tests.json
prompt_evolve/: __init__.py  clarify.py  cli.py  config.py  evaluator.py  inspo.py  llm.py  mcp_tools.py  metrics.py  models.py  pipeline.py  prompts.py  providers.py  report.py  rewards.py  scope.py  testcases.py  trajectories.py  workbench.py
runs/: reviewer_prompt_tests_final.json
runs/advanced_reviewer_prompt/: failure_analysis.md  final_prompt.md  population.json  replay_buffer.json  report.json  report.md  task_spec.yaml  tests.json  tool_policy.yaml
runs/advanced_reviewer_prompt_v2/: failure_analysis.md  final_prompt.md  order_prompt.improved.md  order_prompt.md  population.json  promptfoo.yaml  replay_buffer.json  report.json  report.md  reward_config.yaml  task_spec.yaml  tool_policy.yaml
runs/docker-smoke/: final_prompt.md  report.json  report.md  tests.json
runs/latest/: final_prompt.md  report.json  report.md  tests.json
scripts/: init-env.ps1  init-env.sh  run-local.ps1  run-local.sh  setup-local.ps1  setup-local.sh
(+130 files in other folders)
