[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-evolution-cli"
version = "0.1.0"
description = "CLI utility for SCOPE prompt evolution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Prompt Evolution CLI contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
  "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[project.scripts]
prompt-evolve = "prompt_evolve.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["prompt_evolve"]

[tool.coverage.run]
branch = true
source = ["prompt_evolve"]

[tool.coverage.report]
show_missing = true
skip_covered = false
